[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "bug-triage-rl"
version = "0.1.0"
description = "Bug Triage & Escalation Desk — OpenEnv RL Environment"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.104.0",
    "uvicorn>=0.24.0",
    "pydantic>=2.0.0",
    "numpy>=1.24.0",
    "openai>=1.0.0",
    "gymnasium>=0.29.0",
    "requests>=2.25.0",
]

[project.optional-dependencies]
dev = ["pytest", "httpx"]

[tool.hatch.build.targets.wheel]
packages = ["src", "server"]
